📍 Add route `/jobs`
