# src/schemas/index.ts
@@ -1,2 +1,3 @@
 export { UUID } from './ids'
 export { ValidateErrorJSON } from './errors'
+export { ResponseJSON } from "./responses"
