# src/schemas/responses.ts
@@ -1,0 +1,3 @@
+export interface ResponseJSON {
+    message: string
+}
